UWP changing button hover text color to grey
It would probably be even better to make the buttons not change color on hover, but I haven't found a good way to do that yet.

This at least is easier to read when hovering over a button whose background is black, rather than having a text hover color of black

--- a/ActRec/ActRec.UWP/App.xaml
+++ b/ActRec/ActRec.UWP/App.xaml
@@ -5,4 +5,8 @@
     xmlns:local="using:ActRec.UWP"
     RequestedTheme="Light">
 
+    <Application.Resources>
+        <SolidColorBrush x:Key="ButtonForegroundPointerOver">#80ffffff</SolidColorBrush>
+    </Application.Resources>
+
 </Application>
