hopefully updating at least iOS to MAUI

--- a/ActRec/ActRec/MainPage.xaml
+++ b/ActRec/ActRec/MainPage.xaml
@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
+<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:ios="clr-namespace:Xamarin.Forms.PlatformConfiguration.iOSSpecific;assembly=Xamarin.Forms.Core"
-             xmlns:local="clr-namespace:ActRec"
+             xmlns:ios="clr-namespace:Microsoft.Maui.Controls.PlatformConfiguration.iOSSpecific;assembly=Microsoft.Maui.Controls"
              x:Class="ActRec.MainPage"
-             ios:Page.UseSafeArea="true">
+             ios:Page.UseSafeArea="True">
+
 
     <StackLayout>
         <!-- Place new controls here -->
